[gd_scene load_steps=8 format=2]

[ext_resource path="res://icon.png" type="Texture2D" id=1]
[ext_resource path="res://Under.jpg" type="Texture2D" id=2]
[ext_resource path="res://Progress.jpg" type="Texture2D" id=3]
[ext_resource path="res://Ingredient.gd" type="Script" id=4]
[ext_resource path="res://SwanseaBold-D0ox.ttf" type="FontFile" id=5]

[sub_resource type="FontFile" id=1]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="FontFile" id=2]
size = 18
font_data = ExtResource( 5 )

[node name="IngredientImage" type="Sprite2D"]
position = Vector2( 0.471939, -0.359684 )
scale = Vector2( 0.802999, 0.756647 )
texture = ExtResource( 1 )
script = ExtResource( 4 )

[node name="NameLabel" type="Label" parent="."]
offset_left = -28.0811
offset_top = -60.0
offset_right = 27.9189
offset_bottom = -36.0
grow_horizontal = 2
custom_fonts/font = SubResource( 1 )
text = "Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SweetIndicator" type="TextureProgressBar" parent="."]
offset_left = -99.4054
offset_top = -29.5594
offset_right = -84.4054
offset_bottom = 30.4406
max_value = 5.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 3 )
fill_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SweetImage" type="Sprite2D" parent="."]
position = Vector2( -93.7296, 48.9311 )
scale = Vector2( 0.46875, 0.40625 )
texture = ExtResource( 1 )

[node name="SourIndicator" type="TextureProgressBar" parent="."]
offset_left = -60.8918
offset_top = -30.2406
offset_right = -45.8918
offset_bottom = 29.7594
max_value = 5.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 3 )
fill_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SourImage" type="Sprite2D" parent="."]
position = Vector2( -55.2027, 48.2061 )
scale = Vector2( 0.484375, 0.4375 )
texture = ExtResource( 1 )

[node name="SavoryIndicator" type="TextureProgressBar" parent="."]
offset_left = 49.7567
offset_top = -30.6531
offset_right = 64.7567
offset_bottom = 29.3469
max_value = 5.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 3 )
fill_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SavoryImage" type="Sprite2D" parent="."]
position = Vector2( 55.7972, 48.6561 )
scale = Vector2( 0.421875, 0.40625 )
texture = ExtResource( 1 )

[node name="CaffieneIndicator" type="TextureProgressBar" parent="."]
offset_left = 84.2605
offset_top = -30.8185
offset_right = 99.2605
offset_bottom = 29.1815
max_value = 5.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 3 )
fill_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CaffieneImage" type="Sprite2D" parent="."]
position = Vector2( 92.6215, 47.8124 )
scale = Vector2( 0.46875, 0.4375 )
texture = ExtResource( 1 )

[node name="AddIngredient" type="Button" parent="."]
offset_left = -25.2587
offset_top = 39.5799
offset_right = 25.7413
offset_bottom = 59.5799
custom_fonts/font = SubResource( 2 )
text = "Add"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="AddIngredient" to="." method="_on_AddIngredient_pressed"]
